--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("./logo.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body, #root, .app {
+  height: 100%;
+}
+
+.app {
+  background: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
