--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,25 @@ html, body, #root, .app {
 }
 
 .app {
-  background: red;
+  background: url("background.jpg");
+  background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+button {
+  padding: 16px 32px;
+  font-size: 16px;
+  font-weight: bold;
+  color: grey;
+  background: #efefef;
+  border: none;
+  border-radius: 16px;
+  cursor: pointer;
+}
+
+button:focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 25%);
 }
